fix: redesigned adhd article completed
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/adhd/page1.html
+++ b/articleAssets/aboutmentalhealth/adhd/page1.html
@@ -4,16 +4,24 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 14 Apr 24</p>
+  <div style="display: flex; flex-direction: column; align-content: self; justify-content: center; padding-left: 5%; padding-right: 5%">
+    <img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page1-image1.png">
 
-	<p>ADHD is a type of neurodevelopment condition with symptoms relating to inattentiveness, and/or hyperactivity-impulsivity. It is often diagnosed when you are a child and can persist till your adulthood. While it is not curable, medication is one of the more popular and effective method to manage ADHD. There are also therapies that can help you build the needed skills to overcome your challenges. Seeking help timely and consistently set a structure for yourself will give you good chance of living a fulfilling life just like any other person!</p>
+    <p>Attention Deficit and Hyperactivity Disorder (ADHD) is a type of neuro-development condition with symptoms relating to inattentiveness, and/or hyperactivity-impulsivity. It is often diagnosed when you are a child and can persist till your adulthood. While it is not curable, medication is one of the more popular and effective method to manage ADHD. There are also therapies that can help you build the needed skills to overcome your challenges. Seeking help timely and consistently set a structure for yourself will give you good chance of living a fulfilling life just like any other person!</p>
+  </div>
 </body>
 </html>
