--- a/articleAssets/aboutmentalhealth/adhd/page10.html
+++ b/articleAssets/aboutmentalhealth/adhd/page10.html
@@ -4,26 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="width: 60%;">
-		<div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #e6fcc6; border-radius: 20px; padding: 20px">
-			Medication can come with side effects that differ among individuals, especially on first intake, but should reduce over time. Common side effects include:
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
 
-			<ul>
-				<li>Insomnia or difficulty sleeping</li>
-				<li>Loss of appetite</li>
-				<li>Weight loss</li>
-				<li>Nervousness or irritability</li>
-				<li>Mood swings</li>
-				<li>Headaches and stomachaches</li>
-			</ul>
-		</div>
+		<p>5-mins video:
+		<a href="https://www.youtube.com/watch?v=5l2RIOhDXvU" style="color: #765000">https://www.youtube.com/watch?v=5l2RIOhDXvU</a>
+		</p>
+
+		<p>
+			<a href="internal:///meditation/meditation/" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
+		</p>
 	</div>
 </body>
 </html>
