--- a/articleAssets/aboutmentalhealth/adhd/page2.html
+++ b/articleAssets/aboutmentalhealth/adhd/page2.html
@@ -4,20 +4,34 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex">
-		<div style="flex: 6">
-			<h2>WHAT IS IT</h2>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="align-self: center"><b>WHAT IS IT?</b></h1>
 
-			<p>ADHD is one of the more common type of neurodevelopmental disorder. If you have ADHD, you may notice difficulties in regulating your everyday behaviour/ reactions to that appropriate of your age that frequently persists through adolescence into adult years. It can be related but not limited to inattention, hyperactivity and impulsivity which is caused by dysregulation of your brain’s prefrontal cortex that governs your logical thinking and self-control of impulses.</p>
-		</div> 
-		<img style="flex: 1" width="35%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page2-image1.png">
+		<p>ADHD is one of the more common type of neurodevelopmental disorder. If you have ADHD, you may notice difficulties in regulating your everyday behaviour/ reactions to that appropriate of your age that frequently persists through adolescence into adult years. It can be related but not limited to inattention, hyperactivity and impulsivity which is caused by dysregulation of your brain’s prefrontal cortex that governs your logical thinking and self-control of impulses.</p>
+		
+		<img style="align-self: center; width: 70%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page2-image1.png">
 	</div>
 </body>
 </html>
