--- a/articleAssets/aboutmentalhealth/adhd/page4.html
+++ b/articleAssets/aboutmentalhealth/adhd/page4.html
@@ -4,28 +4,46 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex">
-		<div style="flex: 6">
-			<h2>SYMPTOMS</h2>
+	<div style="display: flex; flex-direction: column; align-content: self; padding-left: 5%; padding-right: 5%;">
+		<h1 style="align-self: center"><b>SYMPTOMS</b></h1>
 
-			<p>
-				A diagnosis is given by a psychiatrist depending on the combination of symptoms presented at the time of assessment:
+		<p>
+			A diagnosis is given by a psychiatrist depending on the combination of symptoms presented at the time of assessment:
 
-				<ul>
-					<li>Several hyperactive-impulsive or inattentive symptoms as a child</li>
-					<li>Several symptoms present in at least two settings e.g., school and home</li>
-					<li>Symptoms are disrupting and interfering with your ability to function in social, school or work setting</li>
-				</ul>
-			</p>
-		</div> 
-		<img style="flex: 1" width="35%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page4-image1.png">
+			<ul>
+				<li>Several <b>hyperactive-impulsive or inattentive</b> symptoms as a child</li>
+				<li>Several symptoms present in <b>at least two settings</b> e.g., school and home</li>
+				<li>Symptoms are <b>disrupting and interfering with</b> your ability to <b>function</b> in social, school or work setting</li>
+			</ul>
+		</p>
+
+		<img style="width: 80%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page4-image1.png">
 	</div>
 </body>
 </html>
