--- a/articleAssets/aboutmentalhealth/adhd/page5.html
+++ b/articleAssets/aboutmentalhealth/adhd/page5.html
@@ -4,68 +4,46 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
 </style>
 <body>
-	<div style="display: flex; flex-direction: column; justify-content: center;">
-		<div style="display: flex">
-			<div style="display: flex; flex: 1; position: relative; justify-content: center;">
-				<img style="width: 60%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page5-image1.png">
-				<div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"><b>Inattentive</b></div>
-			</div>
-			<div style="display: flex; flex: 1; position: relative; justify-content: center;">
-				<img style="width: 60%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page5-image2.png">
-				<div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"><b>Inattentive</b></div>
-			</div>
-			<div style="display: flex; flex: 1; position: relative; justify-content: center;">
-				<img style="width: 60%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page5-image3.png">
-				<div style="position: absolute; top: 50%; left: 50%; transform: translate(-60%, -50%);"><b>Inattentive</b></div>
-			</div>
-		</div>
-		<div style="display: flex">
-			<div style="flex: 1">
-				<p>
-					<ul>
-						<li>Not attentive to details</li>
-						<li>Making careless mistakes</li>
-						<li>Failing to stay on tasks</li>
-						<li>Not listening</li>
-						<li>Losing things easily</li>
-						<li>Being distracted</li>
-						<li>Being forgetful</li>
-					</ul>
-				</p>
-			</div>
-			<div style="flex: 1">
-				<p>
-					<ul>
-						<li>Fidgeting</li>
-						<li>Squirming</li>
-						<li>Getting up often when seated</li>
-						<li>Talking excessively</li>
-						<li>Talking out of turn/ Blurting out</li>
-						<li>Interrupting</li>
-						<li>Often “on the go” as if “driven by a motor”</li>
-					</ul>
-				</p>
-			</div>
-			<div style="flex: 1">
-				<p>
-					<ul>
-						<li>Self-awareness</li>
-						<li>Inhibition or self-restraint</li>
-						<li>Working memory (non-verbal and verbal)</li>
-						<li>Emotional self-regulation</li>
-						<li>Self-motivation</li>
-						<li>Planning and problem solving</li>
-					</ul>
-				</p>
-			</div>
-		</div>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+			<h1 style="align-self: center"><b>IMPACT ON NS</b></h1>
+			
+			<p>Given the difficulties with inattention/ hyperactivity-impulsiveness (depending on how severe it is), you will likely find yourself “bonding” with Sergeant Major over extra duties or “counselling”. The following scenarios could be familiar to you.</p>
+		
+		<p>
+			<b>Poor impulse control leading to unwise and impulsive decisions being made</b> e.g.,
+			<ul>
+				<li>Going to certain areas out of curiosity despite being warned not to</li>
+				<li>Choosing to take the more “fun/convenient” way instead of the safe way</li>
+			</ul>
+		</p>
+
+		<img style="width: 60%; align-self: center" src="../../assets/articleAssets/aboutmentalhealth/adhd/page5-image1.png">
 	</div>
 </body>
 </html>
