--- a/articleAssets/aboutmentalhealth/adhd/page7.html
+++ b/articleAssets/aboutmentalhealth/adhd/page7.html
@@ -4,36 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; flex-direction: column;">
-		<div style="display: flex; gap: 10px">
-			<img style="flex: 1; width: 15%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page7-image1.png">
-			<div style="flex: 5">
-				<b>Poor sustained attention or persistence of effort to tasks e.g.,</b>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<img style="width: 60%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page7-image1.png">
 
-				<ul style="list-style-type: '– ';">
-					<li>Breaking away from given tasks frequently to engage in game/play and taking longer than needed to complete the assignment</li>
-					<li>Making a lot of careless mistakes especially when engaged in protracted, tedious and unstimulating task.</li>
-				</ul>
-			</div>
-		</div>	
-		<div style="display: flex; gap: 10px;">
-			<div style="flex: 5;">
-				<b>Not remembering to do things/ unconsciously act without hindsight or forethought.</b>
+		<p style="text-align: center;">
+			<b>Poor sustained attention or persistence of effort to tasks</b> e.g.,
+		</p>
 
-				<ul style="list-style-type: '– ';">
-					<li>Unintended forgetfulness resulting in frequent lateness</li>
-					<li>Making assumptions that are often wrong in turn deviated from what was instructed.</li>
-				</ul>
-			</div>
-			<img style="flex: 1; width: 20%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page7-image2.png">
-		</div>
+		<p style="text-align: center;">
+			Breaking away from given tasks frequently to engage in game/play and taking longer than needed to complete the assignment
+		</p>
+
+		<p style="text-align: center;">
+			Making a lot of careless mistakes especially when engaged in protracted, tedious and unstimulating task.
+		</p>
 	</div>
 </body>
 </html>
