--- a/articleAssets/aboutmentalhealth/adhd/page8.html
+++ b/articleAssets/aboutmentalhealth/adhd/page8.html
@@ -4,28 +4,52 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
 </style>
 <body>
-	<div>
-		<h2>TREATMENT</h2>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="align-self: center"><b>TREATMENT</b></h1>
 
-		<p>At present, no treatments have been found to cure this disorder, but many treatments exist to effectively manage and ease the symptoms.</p>
+		<p>
+			At present, no treatments have been found to cure this disorder, but many treatments exist to effectively manage and ease the symptoms such as <b>medication</b> and <b>therapy</b>.
+		</p>
 
-		<div style="display: flex;">
-			<div style="display: flex; flex: 1; align-items: center; flex-direction: column;">
-				<img style="width: 50%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page8-image1.png">
-				<b>Meditation</b>
-			</div>
-			<div style="display: flex; flex: 1; align-items: center; flex-direction: column;">
-				<img style="width: 80%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page8-image2.png">
-				<b>Therapy</b>
-			</div>
-		</div>
+		<img style="width: 100%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page8-image1.png">
+
+		<p>
+			<b>Medication</b> can come with side effects that differ among individuals, especially on first intake, but should reduce over time e.g.,
+			<ul>
+				<li>Insomnia or difficulty sleeping</li>
+				<li>Loss of appetite</li>
+				<li>Weight loss</li>
+				<li>Nervousness or irritability</li>
+				<li>Mood swings</li>
+				<li>Headaches and stomachaches</li>
+			</ul>
+		</p>
 	</div>
 </body>
 </html>
