--- a/articleAssets/aboutmentalhealth/adhd/page9.html
+++ b/articleAssets/aboutmentalhealth/adhd/page9.html
@@ -4,17 +4,52 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	table, tr, th {
+			border: 1px solid;
+	}
+
+	table {
+		border-collapse: collapse;
+	}
+
+	td {
+		padding: 5px;
+	}
 </style>
 <body>
-	<h3>Medication</h3>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p>
+			While medication is typically the go-to approaches for adults and children dealing with attention-deficit/hyperactivity disorder,  those who want extra support or don't want to take medication, ADHD therapies can help manage their condition 
+		</p>
 
-	<div style="display: flex; justify-content: center;">
-		<img style="width: 60%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
+		<img style="width: 100%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
+
+		<p style="font-style: italic;">
+				If you have or believe you have ADHD and it is severely impacting your life, do seek professional help as soon you can! :)
+				<br><br>
+				Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+		</p>
 	</div>
 </body>
 </html>
