--- a/articleAssets/aboutmentalhealth/adhd/page6.html
+++ b/articleAssets/aboutmentalhealth/adhd/page6.html
@@ -4,30 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; flex-direction: column;">
-		<div style="flex: 1">
-			<h3>IMPACT ON NS</h3>
-			
-			<p>Given the difficulties with inattention/hyperactivity-impulsiveness (depending on how severe it is), you will likely find yourself “bonding” with Sergeant Major over extra duties or “counselling”. The following scenarios could be familiar to you.</p>
-		</div>
-		<div style="display: flex; flex: 1; gap: 10px">
-			<img style="width: 25%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page6-image1.png">
-			<div style="flex: 5; margin-top: 20px">
-				<b>Poor impulse control leading to unwise and impulsive decisions being made</b> e.g.,
-				<br>
-				<ul style="list-style-type: ' – ';">
-					<li>Going to certain areas out of curiosity despite being warned not to</li>
-					<li>Choosing to take the more “fun/convenient” way instead of the safe way</li>
-				</ul>
-			</div>
-		</div>
+	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<img style="width: 60%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page6-image1.png">
+
+		<p style="text-align: center;">
+			<b>Poor sustained attention or persistence of effort to tasks</b> e.g.,
+		</p>
+
+		<p style="text-align: center;">
+			Breaking away from given tasks frequently to engage in game/play and taking longer than needed to complete the assignment
+		</p>
+
+		<p style="text-align: center;">
+			Making a lot of careless mistakes especially when engaged in protracted, tedious and unstimulating task.
+		</p>
 	</div>
 </body>
 </html>
