fix: img height/width scaling issue
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/adhd/page2.html
+++ b/articleAssets/aboutmentalhealth/adhd/page2.html
@@ -21,6 +21,10 @@
 		font-weight: 700;
 	}
 
+	p + ul {
+		margin-top: -16px;
+	}
+
 	h1 {
 		font-size: 20px;
 	}
@@ -31,7 +35,7 @@
 
 		<p>ADHD is one of the more common type of neurodevelopmental disorder. If you have ADHD, you may notice difficulties in regulating your everyday behaviour/ reactions to that appropriate of your age that frequently persists through adolescence into adult years. It can be related but not limited to inattention, hyperactivity and impulsivity which is caused by dysregulation of your brain’s prefrontal cortex that governs your logical thinking and self-control of impulses.</p>
 		
-		<img style="align-self: center; width: 70%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page2-image1.png">
+		<img style="align-self: center; width: 70%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page2-image1.png">
 	</div>
 </body>
 </html>
