--- a/articleAssets/aboutmentalhealth/adhd/page7.html
+++ b/articleAssets/aboutmentalhealth/adhd/page7.html
@@ -21,13 +21,17 @@
 		font-weight: 700;
 	}
 
+	p + ul {
+		margin-top: -16px;
+	}
+
 	h1 {
 		font-size: 20px;
 	}
 </style>
 <body>
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
-		<img style="width: 60%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page7-image1.png">
+		<img style="width: 60%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page7-image1.png">
 
 		<p style="text-align: center;">
 			<b>Poor sustained attention or persistence of effort to tasks</b> e.g.,
