--- a/articleAssets/aboutmentalhealth/adhd/page8.html
+++ b/articleAssets/aboutmentalhealth/adhd/page8.html
@@ -21,12 +21,12 @@
 		font-weight: 700;
 	}
 
-	h1 {
-		font-size: 20px;
-	}
-
 	p + ul {
 		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
 	}
 </style>
 <body>
@@ -37,7 +37,7 @@
 			At present, no treatments have been found to cure this disorder, but many treatments exist to effectively manage and ease the symptoms such as <b>medication</b> and <b>therapy</b>.
 		</p>
 
-		<img style="width: 100%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page8-image1.png">
+		<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page8-image1.png">
 
 		<p>
 			<b>Medication</b> can come with side effects that differ among individuals, especially on first intake, but should reduce over time e.g.,
