--- a/articleAssets/aboutmentalhealth/adhd/page9.html
+++ b/articleAssets/aboutmentalhealth/adhd/page9.html
@@ -21,20 +21,12 @@
 		font-weight: 700;
 	}
 
+	p + ul {
+		margin-top: -16px;
+	}
+
 	h1 {
 		font-size: 20px;
-	}
-
-	table, tr, th {
-			border: 1px solid;
-	}
-
-	table {
-		border-collapse: collapse;
-	}
-
-	td {
-		padding: 5px;
 	}
 </style>
 <body>
@@ -43,7 +35,7 @@
 			While medication is typically the go-to approaches for adults and children dealing with attention-deficit/hyperactivity disorder,  those who want extra support or don't want to take medication, ADHD therapies can help manage their condition 
 		</p>
 
-		<img style="width: 100%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
+		<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
 
 		<p style="font-style: italic;">
 				If you have or believe you have ADHD and it is severely impacting your life, do seek professional help as soon you can! :)
