--- a/articleAssets/aboutmentalhealth/adhd/page1.html
+++ b/articleAssets/aboutmentalhealth/adhd/page1.html
@@ -16,10 +16,22 @@
     font-weight: 400;
     font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <div style="display: flex; flex-direction: column; align-content: self; justify-content: center; padding-left: 5%; padding-right: 5%">
-    <img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/adhd/page1-image1.png">
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page1-image1.png">
 
     <p>Attention Deficit and Hyperactivity Disorder (ADHD) is a type of neuro-development condition with symptoms relating to inattentiveness, and/or hyperactivity-impulsivity. It is often diagnosed when you are a child and can persist till your adulthood. While it is not curable, medication is one of the more popular and effective method to manage ADHD. There are also therapies that can help you build the needed skills to overcome your challenges. Seeking help timely and consistently set a structure for yourself will give you good chance of living a fulfilling life just like any other person!</p>
   </div>
