--- a/articleAssets/aboutmentalhealth/adhd/page3.html
+++ b/articleAssets/aboutmentalhealth/adhd/page3.html
@@ -21,12 +21,12 @@
 		font-weight: 700;
 	}
 
-	h1 {
-		font-size: 20px;
-	}
-
 	p + ul {
 		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
 	}
 </style>
 <body>
@@ -62,7 +62,7 @@
 			</p>
 		</div>
 
-		<img style="width: 70%; align-self: center" src="../../assets/articleAssets/aboutmentalhealth/adhd/page3-image1.png">
+		<img style="width: 70%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page3-image1.png">
 	</div>
 </body>
 </html>
