--- a/articleAssets/aboutmentalhealth/adhd/page4.html
+++ b/articleAssets/aboutmentalhealth/adhd/page4.html
@@ -43,7 +43,7 @@
 			</ul>
 		</p>
 
-		<img style="width: 80%; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page4-image1.png">
+		<img style="width: 80%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page4-image1.png">
 	</div>
 </body>
 </html>
