fix: new styling for meditation internal link added
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/adhd/page10.html
+++ b/articleAssets/aboutmentalhealth/adhd/page10.html
@@ -37,9 +37,9 @@
 		<a href="https://www.youtube.com/watch?v=5l2RIOhDXvU" style="color: #765000">https://www.youtube.com/watch?v=5l2RIOhDXvU</a>
 		</p>
 
-		<p>
-			<a href="internal:///meditation/meditation/" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
-		</p>
+		<a href="internal:///meditation/meditation/" style="color: #765000">
+			<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/meditation.png">
+		</a>
 	</div>
 </body>
 </html>
