fix: redesigned mindful pause article completed
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/selfcare/mindfulpause/page1.html
+++ b/articleAssets/selfcare/mindfulpause/page1.html
@@ -4,16 +4,36 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>  
-  <p style="font-style: italic;">Date of post: 17 Aug 24</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 70%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page1-image1.png">
 
-  <p>In the hustle and bustle, it's easy to get caught up in the whirlwind of responsibilities, tasks and endless to-do lists. We may then neglect other important aspects such as family, friends and our own needs. While battling these demands, it is crucial to remember the transformative impact of strategic pauses to re-engage with our present moment so as to reduce stress, enhance productivity and improves our well-being! ​</p>
+    <p>In the hustle and bustle, it's easy to get caught up in the whirlwind of responsibilities, tasks and endless to-do lists. We may then neglect other important aspects such as family, friends and our own needs. While battling these demands, it is crucial to remember the transformative impact of strategic pauses to re-engage with our present moment so as to reduce stress, enhance productivity and improves our well-being! ​</p>
+  </div>
 </body> 
 </html>
