--- a/articleAssets/selfcare/mindfulpause/page11.html
+++ b/articleAssets/selfcare/mindfulpause/page11.html
@@ -31,13 +31,11 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
-    <h1 style="align-self: center"><b>WHAT IS IT?</b></h2>
+    <img style="width: 70%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/selfcare/mindfulpause/page11-image1.png">
 
-    <p>Mindful pauses are brief, intentional and conscious moments where we step back from the rush to reconnect with ourselves and our surroundings. They're like small pockets of calm amidst the chaos, allowing us to ground ourselves in the present moment. </p>  
-  
-    <div style="display: flex; flex: 1; justify-content: center;">
-      <img style="width: 80%; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page2-image1.png">
-    </div>
+    <p style="text-align: center;">Try creating your own Mindful Pause list.</p>
+
+    <p style="text-align: center;">Make it fun by turning it into a dart board or a spin wheel to select which mindful activity to embark for today!</p>
   </div>
 </body>
 </html>
