--- a/articleAssets/selfcare/mindfulpause/page12.html
+++ b/articleAssets/selfcare/mindfulpause/page12.html
@@ -31,13 +31,15 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
-    <h1 style="align-self: center"><b>WHAT IS IT?</b></h2>
+    <h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b>  </h1>
 
-    <p>Mindful pauses are brief, intentional and conscious moments where we step back from the rush to reconnect with ourselves and our surroundings. They're like small pockets of calm amidst the chaos, allowing us to ground ourselves in the present moment. </p>  
-  
-    <div style="display: flex; flex: 1; justify-content: center;">
-      <img style="width: 80%; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page2-image1.png">
-    </div>
+    <p>
+      <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
+    </p>
+    
+    <a href="internal:///meditation/meditation/" style="color: #765000">
+			<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/meditation.png">
+		</a>
   </div>
 </body>
-</html>
+</html> 
