--- a/articleAssets/selfcare/mindfulpause/page4.html
+++ b/articleAssets/selfcare/mindfulpause/page4.html
@@ -4,27 +4,36 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <p>There are multiple benefits to mindful pauses such as:</p>
-  <div style="display: flex; flex-direction: row; gap: 20px">
-    <img style="flex: 1" src="../../assets/articleAssets/selfcare/mindfulpause/page4-image1.png" width="100%">
-    <p style="flex: 3"><b>Stress Reduction:</b> Taking mindful pauses can help alleviate stress and anxiety, allowing us to re-evaluate where we are in our pursue and approach challenges with a clearer mind</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page4-image1.png">
+
+    <b>Enhanced Well-being:</b> By giving ourselves chance to pause and breathe, we allow mental, emotional, and physical recovery to take place. </p>
   </div>
-  <br>
-  <div style="display: flex; flex-direction: row; gap: 20px">
-    <p style="flex: 3"><b>Increased Productivity: </b> Paradoxically, taking breaks can boost productivity. Mindful pauses provide an opportunity to recharge and rejuvenate, allowing us to return to our tasks with renewed focus and energy.</p>
-    <img style="flex: 2" src="../../assets/articleAssets/selfcare/mindfulpause/page4-image2.png" width="100%">
-  </div>  
-  <br>
-  <div style="display: flex; flex-direction: row; gap: 20px">
-    <img style="flex: 1" src="../../assets/articleAssets/selfcare/mindfulpause/page4-image3.png" width="100%">
-    <p style="flex: 3"><b>Enhanced Well-being:</b> By giving ourselves chance to pause and breathe, we allow mental, emotional, and physical recovery to take place. </p>
-  </div>  
 </body>
 </html>
