--- a/articleAssets/selfcare/mindfulpause/page10.html
+++ b/articleAssets/selfcare/mindfulpause/page10.html
@@ -4,16 +4,41 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
-  <br><br>
-  <a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <br><br>
+    <img style="width: 70%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page10-image1.png">
+    <br><br>
+    <h1 style="text-align: center; margin-bottom: -10px;"><b>Embrace Imperfection</b></h1>
+
+    <p style="text-align: center;">
+			Remember, the goal of mindful pauses isn't perfection but presence. It's okay if your mind wanders or if you struggle to fully quiet your thoughts. The act of simply noticing and returning to the present moment is what matters most.
+		</p>
+  </div>
 </body>
 </html>
