--- a/articleAssets/selfcare/mindfulpause/page3.html
+++ b/articleAssets/selfcare/mindfulpause/page3.html
@@ -4,22 +4,43 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  
-  <div style="display: flex; flex-direction: column;">
-    <h2>WHAT IS IT</h2>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
 
-    <p>Mindful pauses are brief, intentional and conscious moments where we step back from the rush to reconnect with ourselves and our surroundings. They're like small pockets of calm amidst the chaos, allowing us to ground ourselves in the present moment. </p>  
-  
-    <div style="display: flex; flex: 1; justify-content: center;">
-      <img style="width: 70%" src="../../assets/articleAssets/selfcare/mindfulpause/page3-image1.png">
-    </div>
+    <p style="text-align: center;">There are multiple benefits to mindful pauses such as:</p>
+
+    <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page3-image1.png">
+
+    <b>Stress Reduction:</b> Taking mindful pauses can help alleviate stress and anxiety, allowing us to re-evaluate where we are in our pursue and approach challenges with a clearer mind</p>
+
+    <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page3-image2.png">
+
+    <b>Increased Productivity: </b> Paradoxically, taking breaks can boost productivity. Mindful pauses provide an opportunity to recharge and rejuvenate, allowing us to return to our tasks with renewed focus and energy.</p>
   </div>
 </body>
 </html>
