--- a/articleAssets/selfcare/mindfulpause/page7.html
+++ b/articleAssets/selfcare/mindfulpause/page7.html
@@ -4,15 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <p>It can be uncomfortable when you first pause to be mindful, but follow this tips to ease into it:</p>  
-  <p><b>Start Micro:</b> Begin by integrating short mindful pauses into your daily routine. Whether it's taking a few deep breaths before starting a new task or enjoying a cup of tea without distraction, every moment counts.</p>
-  <p><b>Set Reminders to be Consistent:</b> With so many priorities in life, it's easy to de-prioritise breaks. Set gentle reminders to regularly prompt yourself to take pauses. Schedule routine self-care time to unwind from the busyness of your work. The more you practise and engage in mindful pauses, the easier it is to activate it in times of need to hep us gain back control of our stress.</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <p style="text-align: center;">It can be uncomfortable when you first pause to be mindful, but follow this tips to ease into it:</p>  
+
+    <img style="width: 70%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page7-image1.png">
+
+    <h1 style="text-align: center; margin-bottom: -10px;"><b>Start Micro</b></h1>
+
+    <p style="text-align: center;">Begin by integrating short mindful pauses into your daily routine. Whether it's taking a few deep breaths before starting a new task or enjoying a cup of tea without distraction, every moment counts.</p>
+  </div>
 </body>
 </html>
