--- a/articleAssets/selfcare/mindfulpause/page8.html
+++ b/articleAssets/selfcare/mindfulpause/page8.html
@@ -4,14 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <p><b>Find What Works for You:</b> There's no one-size-fits-all approach to what a good break is. Experiment with different techniques of breathing, or combinations of factors to build your optimal pause environment or simply just start observing your surroundings to break your rushing thoughts. You can also explore different activities to find one that interests you. Discover what resonates with you and build your own self-care board, like the one below!</p>  
-  <p><b>Embrace Imperfection:</b> Remember, the goal of mindful pauses isn't perfection but presence. It's okay if your mind wanders or if you struggle to fully quiet your thoughts. The act of simply noticing and returning to the present moment is what matters most.</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 70%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/mindfulpause/page8-image1.png">
+
+    <h1 style="text-align: center; margin-bottom: -10px;"><b>Set Reminders to be Consistent</b></h1>
+
+    <p style="text-align: center;">
+			With so many priorities in life, it's easy to de-prioritise breaks. Set gentle reminders to regularly prompt yourself to take pauses. Schedule routine self-care time to unwind from the busyness of your work. The more you practise and engage in mindful pauses, the easier it is to activate it in times of need to hep us gain back control of our stress.
+		</p>
+  </div>
 </body>
 </html>
