--- a/articleAssets/selfcare/sleepqualitychecklist/page1.html
+++ b/articleAssets/selfcare/sleepqualitychecklist/page1.html
@@ -4,16 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-	<p style="font-style: italic;">Date of Post: 8 Sep 24</p>
+	<div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 50%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/selfcare/selfcare-logo.png">
 
-	<p>Sleep quality is a measure of how well you sleep, i.e., the ability to have uninterrupted sleep. While measuring the number of sleep hours is fairly easy, assessing if you are having quality sleep is less direct. Use this checklist to determine if you are hitting the characteristics of poor sleep quality and bring along the insights for further discussion with your clinicians (e.g., doctor, counsellor, psychologist, therapist) to identify changes that can improve your sleep.</p>
+		<p>
+			Sleep quality is a measure of how well you sleep, i.e., the ability to have uninterrupted sleep. While measuring the number of sleep hours is fairly easy, assessing if you are having quality sleep is less direct. Use this checklist to determine if you are hitting the characteristics of poor sleep quality and bring along the insights for further discussion with your clinicians (e.g., doctor, counsellor, psychologist, therapist) to identify changes that can improve your sleep.
+		</p>
+	</div>
 </body>
 </html>
