--- a/articleAssets/selfcare/sleepqualitychecklist/page2.html
+++ b/articleAssets/selfcare/sleepqualitychecklist/page2.html
@@ -4,37 +4,82 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>Falling & Maintaining Sleep</h2>
-	
-	<form action="/">
-		<input type="checkbox" id="form1id1" name="form1id1" value="form1id1value">
-		<label for="form1id1">You take more than 30 mins to fall asleep after getting into bed</label><br>
-		<input type="checkbox" id="form1id2" name="form1id2" value="form1id2value">
-		<label for="form1id2">You lie awake for more than 20mins if you wake up in the middle of your sleep</label><br>
-		<input type="checkbox" id="form1id3" name="form1id3" value="form1id3value">
-		<label for="form1id3">You often wake up more than once per night</label><br>
-		<input type="checkbox" id="form1id4" name="form1id4" value="form1id4value">
-		<label for="form1id4">You spend less than 85% of your time in bed asleep</label><br>
-	</form>
+	<div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+		<h1><b>Falling & Maintaining Sleep</b></h1>
+		
+		<form style="display: flex; flex-direction: column; gap: 16px" action="/">
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form1id1" name="form1id1" value="form1id1value">
+				<label for="form1id1">You take more than 30 mins to fall asleep after getting into bed</label>
+			</div>
 
-	<h2>Signs of Poor Sleep</h2>
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form1id2" name="form1id2" value="form1id2value">
+				<label for="form1id2">You lie awake for more than 20mins if you wake up in the middle of your sleep</label>
+			</div>
 
-	<form action="/">
-		<input type="checkbox" id="form2id1" name="form1id1" value="form1id1value">
-		<label for="form2id1">You feel tired even after long hours of sleep</label><br>
-		<input type="checkbox" id="form2id2" name="form2id2" value="form2id2value">
-		<label for="form2id2">You need more caffeine to stay alert</label><br>
-		<input type="checkbox" id="form2id3" name="form2id3" value="form2id3value">
-		<label for="form2id3">You have difficulty concentrating during the day</label><br>
-		<input type="checkbox" id="form2id4" name="form2id4" value="form2id4value">
-		<label for="form2id4">You feel hungry more often, especially for junk food.</label><br>
-	</form>
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form1id3" name="form1id3" value="form1id3value">
+				<label for="form1id3">You often wake up more than once per night</label>
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form1id4" name="form1id4" value="form1id4value">
+				<label for="form1id4">You spend less than 85% of your time in bed asleep</label>
+			</div>
+		</form>
+		
+		<br>
+
+		<h1><b>Signs of Poor Sleep</b></h1>
+
+		<form style="display: flex; flex-direction: column; gap: 16px" action="/">
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form2id1" name="form2id1" value="form2id1value">
+				<label for="form2id1">You feel tired even after long hours of sleep</label>
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form2id2" name="form2id2" value="form2id2value">
+				<label for="form2id2">You need more caffeine to stay alert</label>
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form2id3" name="form2id3" value="form2id3value">
+				<label for="form2id3">You have difficulty concentrating during the day</label>
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 15px">
+				<input type="checkbox" id="form2id4" name="form2id4" value="form2id4value">
+				<label for="form2id4">You feel hungry more often, especially for junk food.</label><br>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
